--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="header">
             <span>Anime Quiz</span>
-            <h2 id="questions">Question Will Appear Here...</h2>
+            <h2 id="questions">Question Will Appear Here....</h2>
         </div>
 
         <div class="content-box">
